--- a/index.html
+++ b/index.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html>
 
-  <head>
-    <meta charset="utf-8">
-    <title>vue-manage-system | 基于Vue的后台管理系统</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
-    <meta name="keywords" content="vue, vue-manage-system, manage-system, 后台管理系统, element" />
-    <meta name="description" content="基于Vue2 + Element UI 的后台管理系统解决方案" />
-    <script src="static/config.js?v=1.11.1" type="text/javascript" charset="utf-8"></script>
-  </head>
+    <head>
+        <meta charset="utf-8">
+        <title>NovaStar Pro UHD JR</title>
+        <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
+        <meta name="keywords" content="vue, vue-manage-system, manage-system, 后台管理系统, element" />
+        <meta name="description" content="基于Vue2 + Element UI 的后台管理系统解决方案" />
+        <script src="static/config.js?v=1.11.1" type="text/javascript" charset="utf-8"></script>
+    </head>
 
-  <body>
-    <div id="app"></div>
-    <!--<script src="./static/js/vendor.dll.js"></script>-->
-    <!-- <script>
+    <body>
+        <div id="app"></div>
+        <!--<script src="./static/js/vendor.dll.js"></script>-->
+        <!-- <script>
     var _hmt = _hmt || [];
     (function() {
         var hm = document.createElement("script");
@@ -23,6 +23,6 @@
     })();
 </script> -->
 
-  </body>
+    </body>
 
 </html>
