--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
     <head>
         <meta charset="utf-8">
-        <title>NovaStar Pro UHD JR</title>
+        <title>NovaPro UHD Jr</title>
         <link rel="icon" href="static/img/favicon.ico" type="image/ico" />
         <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no">
         <meta name="keywords" content="vue, vue-manage-system, manage-system, 后台管理系统, element" />
